<resources>
    <string name="app_name">Event Planner</string>
    <string name="login_in">Sign In</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="todo">TODO</string>
    <string name="or_sign_in">Or Sign in using</string>
    <string name="name">Name</string>
    <string name="last_name">Lastname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account_log_in">Have an account? Sign In.</string>
    <string name="cellphone">Phone</string>
    <string name="dont_have_account_register">Don\'t have an account? Sign Up.</string>
    <string name="complete_everything">You have to complete all the fields.</string>

    <string name="title_activity_main">Dashboard</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="button_OK">OK</string>
    <string name="button_CANCEL">CANCEL</string>
    <string name="login_error_user_no_registered">There is no user register with this email account.</string>
    <string name="login_error_wrong_password">Wrong password.</string>
    <string name="login_error_enter_email">Type your email account.</string>
    <string name="login_error_enter_password">Type your password.</string>
    <string name="signup_successfully">The account was successfully created.</string>
    <string name="signup_password_insecure">The password must have 6 characters, at least.</string>
    <string name="password_not_matching">Passwords are not matching.</string>
    <string name="signup_email_already_registered">There is already an account for this email.</string>
    <string name="error">An error has occurred…</string>
    <string name="message_close">Do you want to exit the application?</string>
    <string name="message_add_contact">Do you want to add this contact?</string>

    <string name="menu_profile">My Profile</string>
    <string name="menu_events">My Events</string>
    <string name="menu_contacts">My Contacts</string>
    <string name="menu_invitations">My Invitations</string>
    <string name="menu_public_events">Public Events</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log_out">Sign out</string>
    <string name="menu_dashboard">DASHBOARD</string>
    <string name="name_label">Name</string>
    <string name="lastname_label">Lastname</string>
    <string name="phone_label">Phone Number</string>
    <string name="btn_edit">Edit</string>
    <string name="new_event">New Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_title">Title</string>
    <string name="event_description">Description</string>
    <string name="event_place">Place</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_type">Event Type</string>
    <string name="event_owners">Owner/s</string>
    <string name="event_participants">Participants</string>
    <string name="event_uncoming">Uncoming Events</string>
    <string name="event_past">Past Events</string>
    <string name="button_create">Create</string>
    <string name="button_save">Save</string>
    <string name="button_participate">Participate</string>
    <string name="button_participating">Participating</string>
    <string name="button_chat">Chat</string>
    <string name="select_participants">Select participants</string>
    <string-array name="event_type_array">
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <string name="facebook_app_id">426945392718149</string>
    <string name="fb_login_protocol_scheme">fb426945392718149</string>
    <string name="facebook_client_token">82c9ab03d49dce96561687cc4c1a690f</string>

    <string name="read_storage_permission_denied">Oops, it looks like you haven\'t accepted the request permissions. You can do it from phone configurations.</string>
    <string name="error_something_went_wrong">Oops, it looks like something went wrong.</string>
    <string name="add_fields_new_event">You have to complete title, description, place, date and time fields.</string>
    <string name="add_fields_edit_event">You have to complete description, place and date fields.</string>
    <string name="everything_correctly_saved">Done! Everything correctly saved.</string>

    <string name="event_title_hint">Title of event</string>
    <string name="event_description_hint">Describe the event</string>
    <string name="event_place_hint">Place of event</string>
    <string name="event_date_hint">Select the event date</string>
    <string name="event_time_hint">Select the event time</string>
    <string name="send_a_message">Send a message</string>
    <string name="dashboard_start">Start creating events</string>
    <string name="user_welcome">Welcome to EventPlanner</string>

</resources>