<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_invitations" />
        <item
            android:id="@+id/nav_public_events"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_public_events" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>
</menu>