<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_nav_dashboard_to_nav_new_event"
            app:destination="@id/nav_new_event" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_events"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" >
        <action
            android:id="@+id/action_nav_events_to_nav_edit_event"
            app:destination="@id/nav_edit_event" />
        <action
            android:id="@+id/action_nav_events_to_nav_new_event"
            app:destination="@id/nav_new_event" />
    </fragment>

    <fragment
        android:id="@+id/nav_contacts"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" >
        <action
            android:id="@+id/action_nav_contacts_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_invitations"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.InvitationsFragment"
        android:label="@string/menu_invitations"
        tools:layout="@layout/fragment_invitations" >
        <action
            android:id="@+id/action_nav_invitations_to_nav_edit_event"
            app:destination="@id/nav_edit_event" />
    </fragment>

    <fragment
        android:id="@+id/nav_public_events"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.PublicEventsFragment"
        android:label="@string/menu_public_events"
        tools:layout="@layout/fragment_public_events" >
        <action
            android:id="@+id/action_nav_public_events_to_nav_edit_event"
            app:destination="@id/nav_edit_event" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_new_event"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.NewEventFragment"
        android:label="@string/new_event"
        tools:layout="@layout/fragment_new_event" />

    <fragment
        android:id="@+id/nav_edit_event"
        android:name="es.usj.mastertsa.onunez.eventplannerapp.presentation.view.fragments.EditEventFragment"
        android:label="@string/edit_event"
        tools:layout="@layout/fragment_edit_event" />

</navigation>