<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/event_title"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="3dp"
        android:text="@string/event_place"
        android:textSize="11sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="3dp"
        android:text="@string/event_date"
        android:textSize="11sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/btnFavorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/event_owners"
        android:visibility="invisible"/>

</androidx.cardview.widget.CardView>